# VulkanSC-SDK

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml
.github/workflows/: presubmit.yml  release.yml
cmake/: ModifyInstallTree.cmake  Package.cmake  PackageArchiveRenameRoot.cmake  PackageInnoSetup.iss  PackageMakeself.cmake  PackageMakeself.in.sh  PackageProjectConfig.cmake  PackageSign.cmake  PackageSignCommon.cmake  PackageSignContents.cmake  environment.iss
extras/: README.md
extras/common/: LICENSE.txt  README.md
extras/common/share/cmake/VulkanSC/: VulkanSCConfig.cmake
extras/linux/: setup-env.sh
extras/linux/internal/: autosetup-env.sh
extras/windows/: setup-env.bat
tests/: CMakeLists.txt  ExpectedInstallTree.cmake  FilesAbsent.cmake  FilesExist.cmake
